--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100vh;  
   justify-content: center;
+  min-height: -webkit-fill-available;
 }
