--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+html {
+  height: -webkit-fill-available;
+}
+
+body {
+  height: 100vh;
+  min-height: -webkit-fill-available;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
