--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,10 @@ body {
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 1rem 0 1rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;  
-  justify-content: center;
+  height: 100vh;
   min-height: -webkit-fill-available;
 }
