--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,12 @@ html {
 
 body {
   height: 100vh;
-  min-height: -webkit-fill-available;
+  width: 100vw;
+  height: -webkit-fill-available;
 }
 
 #root {
+  width: 100vw;
   max-width: 1280px;
   margin: 0 auto;
   padding: 1rem 0 1rem 0;
@@ -15,5 +17,5 @@ body {
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  min-height: -webkit-fill-available;
+  height: -webkit-fill-available;
 }
