--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body {
   margin: 0 auto;
   padding: 1rem 0 1rem 0;
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
   align-items: center;
   height: 100vh;
