--- a/src/components/ConsumptionChart/ConsumptionChart.css
+++ b/src/components/ConsumptionChart/ConsumptionChart.css
@@ -2,3 +2,10 @@
   height: 400px;
   width: 100%
 }
+
+.consumption-header{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
