--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
   height: 100vh;
   width: 100vw;
   height: -webkit-fill-available;
+  max-height: 720px;  
 }
 
 #root {
@@ -19,4 +20,13 @@ body {
   align-items: center;
   height: 100vh;
   height: -webkit-fill-available;
+}
+
+.button-row {
+  display: flex;
+  align-items: center;
+}
+
+.button-row p {
+  margin: 0 1ch 0 1ch
 }
