fix: 🐛 Graph not loading

--- a/src/components/ConsumptionView/ConsumptionView.css
+++ b/src/components/ConsumptionView/ConsumptionView.css
@@ -8,3 +8,9 @@
     padding-right: 1rem;
 }
 
+.consumption-wrapper {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    height: 100%;
+    width: 100%;
+  }
