fix: 🐛 Hard code height

--- a/src/components/ConsumptionView/ConsumptionView.css
+++ b/src/components/ConsumptionView/ConsumptionView.css
@@ -11,6 +11,6 @@
 .consumption-wrapper {
     margin-top: 2rem;
     margin-bottom: 2rem;
-    height: 100%;
+    height: 400px;
     width: 100%;
   }
